<resources>
    <string name="app_name">cryollet</string>
    <string name="contacts_menu_item">Kontakty</string>
    <string name="home_menu_item">Domov</string>
    <string name="transactions_menu_item">Transakcie</string>

    <!--Login Section -->
    <string name="sign_up">Sign in</string>
    <string name="key">KEY</string>
    <string name="dont_have_wallet">Don\'t have wallet?</string>
    <string name="create_now">Create now.</string>
    <string name="cryolletlogo">cryolletLogo</string>
    <string name="income"><b>INCOME</b></string>
    <string name="expanse"><b>EXPANSE</b></string>
    <string name="request_pay">Request \n payment</string>
    <string name="send_payment">Send Payment</string>
    <string name="account_balance">Account balance</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="currency">CURRENCY</string>
    <string name="wallet_key">WALLET KEY</string>
    <string name="name">NAME</string>
    <string name="amount">AMOUNT</string>
    <string name="contacts">CONTACTS</string>
    <string name="receive_payment">RECEIVE PAYMENT</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="approve">APPROVE</string>
    <string name="request_payment">REQUEST PAYMENT</string>
    <string name="copied">Copied!</string>


    <!-- Currency drop down -->
    <string-array name="currency">
        <item>CZK - Czech Koruna</item>
        <item>DKK - Danish Krone</item>
        <item>DOP - Dominican Peso</item>
        <item>EUR - Euro</item>
        <item>ALL - Albanian Lek</item>
        <item>AMD - Armenian Dram</item>
        <item>AOA - Angolan Kwanza</item>
        <item>ARS - Argentine Peso</item>
        <item>PLN - Polish Zloty</item>
        <item>PYG - Paraguayan Guarani</item>
        <item>QAR - Qatari Riyal</item>
        <item>RON - Romanian Leu</item>
    </string-array>

    <!-- Contacts drop down menu -->
    <string-array name="contancts_names">
        <item>Fero Pajta</item>
        <item>Lukas Hajducak</item>
        <item>Tanicka Smolarova</item>
        <item>Bukvica</item>
    </string-array>

    <!-- Strings related to onLogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_pin">Enter a passcode</string>
    <string name="set_up_pin">Set up your new passcode</string>
    <string name="send_payment_button">SEND PAYMENT</string>
    <string name="payment_completed">Payment completed!</string>
    <string name="great">Great!</string>

</resources>