<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="sk.fei.beskydky.cryollet.ui.login.key.KeyLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/cryollet_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_wide"
            android:contentDescription="@string/cryolletlogo"
            android:src="@drawable/cryollet_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/account_key_text"
            style="@style/main_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key"
            app:layout_constraintBottom_toTopOf="@+id/account_key"
            app:layout_constraintStart_toStartOf="@+id/account_key"
            tools:ignore="MissingConstraints"
            tools:text="KEY" />

        <EditText
            android:id="@+id/account_key"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Your Key:"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.key}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cryollet_logo" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ramabhadra"
            android:onClick="@{() -> viewModel.onLogin()}"
            android:text="@string/sign_up"
            android:textColor="@color/filled_button_text"
            android:textSize="@dimen/login_button_size"
            app:layout_constraintEnd_toEndOf="@+id/account_key"
            app:layout_constraintStart_toStartOf="@+id/account_key"
            app:layout_constraintTop_toBottomOf="@+id/account_key" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            app:layout_constraintVertical_bias="0.891"
            tools:layout_editor_absoluteX="0dp">


            <TextView
                android:id="@+id/dont_have_accout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_wide"
                android:fontFamily="@font/ramabhadra"
                android:text="@string/dont_have_wallet"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="570dp" />

            <TextView
                android:id="@+id/register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ramabhadra"
                android:text="@string/create_now"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                android:onClick="@{() -> viewModel.onRegister()}"
                tools:layout_editor_absoluteX="326dp"
                tools:layout_editor_absoluteY="570dp" />
        </LinearLayout>

        <!-- Circular progress indicator -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/busy_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/account_key"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/cryollet_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>