<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="sk.fei.beskydky.cryollet.home.requestpayment.RequestPaymentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/receive_payment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/request_payment"
            android:textAlignment="center"
            android:textColor="@color/default_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- AMOUNT -->
        <TextView
            android:id="@+id/send_payment_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ramabhadra"
            android:text="@string/amount"
            android:textColor="@color/filled_button_background"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receive_payment_text"
            tools:ignore="MissingConstraints"
            tools:text="AMOUNT" />

        <EditText
            android:id="@+id/request_payment_amount"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:autofillHints="Your Key:"
            android:background="@drawable/rounded_edittext"
            android:digits="0123456789."
            android:ems="10"
            android:inputType="number"
            android:text="@={viewModel.requestPaymentAmount}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_payment_amount_text"
            tools:ignore="LabelFor,MissingConstraints" />
        <!--  -->

        <!-- CURRENCY -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputcurrency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:textColorHint="@color/filled_button_background"
            app:boxStrokeColor="@color/filled_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_payment_amount">

            <AutoCompleteTextView
                android:id="@+id/currency_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/currency"
                android:singleLine="true"
                android:text="@={viewModel.requestPaymentCurrency}"
                android:textColor="@color/filled_button_background"
                tools:text="EUR" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:onClick="@{()->viewModel.onRequestPaymentCancel()}"
            android:text="@string/cancel"
            android:textColor="@color/filled_button_background"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputcurrency"
            app:layout_constraintVertical_bias="0.100000024"
            app:strokeWidth="2dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/approve_payment_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/approve"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:strokeColor="@color/filled_button_background"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>