<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="sk.fei.beskydky.cryollet.home.sendpayment.SendPaymentViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/send_payment_text"
            style="@style/main_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send_payment"
            android:textSize="@dimen/big_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="SEND PAYMENT" />

        <!-- NAME -->
        <TextView
            android:id="@+id/send_payment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/name"
            android:textColor="@color/button_background"
            android:textSize="@dimen/smaller_text_size"
            android:fontFamily="@font/ramabhadra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_payment_text"
            tools:ignore="MissingConstraints"
            tools:text="NAME" />

        <EditText
            android:id="@+id/account_key"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:autofillHints="Your Key:"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_payment_name"
            tools:ignore="LabelFor,MissingConstraints" />
        <!-- -->

        <!-- WALLET KEY -->
        <TextView
            android:id="@+id/send_payment_wallet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/wallet_key"
            android:fontFamily="@font/ramabhadra"
            android:textColor="@color/button_background"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_key"
            tools:ignore="MissingConstraints"
            tools:text="WALLET KEY" />

        <EditText
            android:id="@+id/send_payment_wallet_key"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:autofillHints="Your Key:"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_payment_wallet_text"
            tools:ignore="LabelFor,MissingConstraints" />
        <!-- -->

            <!-- AMOUNT -->
            <TextView
                android:id="@+id/send_payment_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/amount"
                android:textColor="@color/button_background"
                android:textSize="@dimen/smaller_text_size"
                android:fontFamily="@font/ramabhadra"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/send_payment_wallet_key"
                tools:ignore="MissingConstraints"
                tools:text="AMOUNT" />

        <EditText
            android:id="@+id/send_payment_amount"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:autofillHints="Your Key:"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_payment_amount_text"
            tools:ignore="LabelFor,MissingConstraints" />
        <!--  -->

        <!-- CURRENCY -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:hint="@string/currency"
            android:textColorHint="@color/button_background"
            app:boxStrokeColor="@color/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_payment_amount">

            <AutoCompleteTextView
                android:id="@+id/currency_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/button_background"
                android:text="@={viewModel.user}"
                tools:text="EUR" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>