<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/account_balance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_balance"
        android:textColor="@color/button_background"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/account_balance_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="$5,000"
        android:textColor="@color/button_background"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_balance_text"
        tools:ignore="MissingConstraints"
        tools:text="$ 5,000" />

    <ImageView
        android:id="@+id/transaction_graph"
        android:layout_width="250dp"
        android:layout_height="218dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_balance_amount"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_currency"
        android:layout_width="0dp"
        android:layout_height="218dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="@dimen/margin_wide"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/transaction_graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transaction_graph"
        app:layout_constraintTop_toTopOf="@+id/transaction_graph">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/transaction_income_LL"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:background="@color/input_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/transaction_expanse_LL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_graph"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/income_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/income"
            android:textAlignment="center"
            android:textColor="@color/button_background" />

        <TextView
            android:id="@+id/sum_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="24"
            android:textAlignment="center"
            android:textColor="@color/button_background"
            android:textSize="@dimen/big_text_size"
            tools:text="24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_expanse_LL"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:background="@color/input_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/transaction_income_LL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transaction_income_LL"
        app:layout_constraintTop_toTopOf="@+id/transaction_income_LL"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/expanse_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/expanse"
            android:textAlignment="center"
            android:textColor="@color/button_background" />

        <TextView
            android:id="@+id/sum_expanse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="13"
            android:textAlignment="center"
            android:textColor="@color/button_background"
            android:textSize="@dimen/big_text_size"
            tools:text="13" />
    </LinearLayout>

    <Button
        android:id="@+id/request_payment_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/request_pay"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_payment_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_income_LL"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/send_payment_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/send_payment"
        android:textColor="@color/button_background"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/request_payment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/request_payment_button"
        app:strokeColor="@color/button_background"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="729dp" />

    <ImageButton
        android:id="@+id/plus_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/plus_button"
        
        app:layout_constraintBottom_toBottomOf="@+id/account_balance_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/account_balance_amount"
        app:layout_constraintVertical_bias="0.0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>